--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL = "postgresql://postgres:postgres@localhost:5432/desafio"
+NODE_ENV = "development"
+DATABASE_URL = "postgresql://postgres:postgres@db:5432/desafio"
