--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
   db:
     image: postgres:17
     environment:
-      PROSTGRES_USER: postgres
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: desafio
     ports:
-      - "5432:5432"
+      - "5433:5432"
