--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "tsx watch server.ts"
+    "dev": "node --watch --env-file .env server.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@fastify/swagger": "^9.6.1",
+    "@fastify/swagger-ui": "^5.2.3",
+    "@scalar/fastify-api-reference": "^1.40.0",
     "drizzle-orm": "^0.44.7",
     "fastify": "^5.6.2",
-    "pg": "^8.16.3"
+    "fastify-type-provider-zod": "^6.1.0",
+    "pg": "^8.16.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
