--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,3 +17,5 @@ services:
       POSTGRES_DB: desafio
     ports:
       - "5433:5432"
+    volumes:
+      - ./docker/setup.sql:/docker-entrypoint-initdb.d/init.sql
