--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "pretest": "dotenv -e .env.test drizzle-kit migrate",
-    "test": "dotenv -e .env.test vitest run --coverage"
+    "test": "dotenv -e .env.test vitest run" 
   },
   "keywords": [],
   "author": "",
@@ -20,13 +20,16 @@
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@scalar/fastify-api-reference": "^1.40.0",
+    "argon2": "^0.44.0",
     "drizzle-orm": "^0.44.7",
     "fastify": "^5.6.2",
     "fastify-type-provider-zod": "^6.1.0",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@vitest/coverage-v8": "^4.0.15",
     "dotenv-cli": "^11.0.0",
